--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=9000
+server.servlet.context-path=/api/v1
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/hogarexperto
+spring.datasource.username=root
+spring.datasource.password=m1d0
 
