updateController and Requests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:mysql://localhost/hogarexperto
 spring.datasource.username=root
 spring.datasource.password=m1d0
 
+logging.level.root = info;
